Added account output DTO
